# SAT-Generation

./: CMakeLists.txt  def.hpp  def.hpp0  main.cpp
